# qoplot

./: ProjectHome.md
qoplot/: AUTHORS  Doxyfile  README.txt  qoplot.kdevelop  qoplot.pro
qoplot/backend/: axesitem.cpp  axesitem.h  backend.cpp  backend.h  backend.pro  converters.cpp  converters.h  figuremanager.cpp  figuremanager.h  figurewindow.cpp  figurewindow.h  graphicsobject.cpp  graphicsobject.h  imageitem.cpp  imageitem.h  lineitem.cpp  lineitem.h  octave.pri  patchitem.cpp  patchitem.h  plotevent.cpp  plotevent.h  plotitem.cpp  plotitem.h  systeminfo.cpp  textitem.cpp  textitem.h  torture.m  uiitem.cpp  uiitem.h
qoplot/contourc/: __contourc__.cc
qoplot/demos/: Makefile  Makefile.in  bar_demo.m  face_alpha2_demo.m  face_alpha_demo.m  line_demo.m  pcolor_demo.m  specgram_demo.m
qoplot/high_level/: Makefile  Makefile.in  __bar.m  __contourc__.oct  __hist.m  __nxtplt__.m  __plt__.m  __pltopt__.m  area.m  axis.m  bar.m  barh.m  caxis.m  clabel.m  colormap.m  contour.m  findobj.m  freqz_plot.m  gca.m  grid.m  histh.m  ohold.m  pareto.m  pcolor.m  plot.m  shading.m  specgram.m
qoplot/qographics/: axes.cpp  axes.h  axesitem.cpp  color.h  enum.cpp  enum.h  figure.cpp  figure.h  figurewindow.cpp  figurewindow.h  figurewindow.ui  image.cpp  image.h  imageitem.cpp  legend.cpp  legenditem.cpp  line.h  lineitem.cpp  matrix.cpp  matrix.h  object.cpp  object.h  patch.cpp  patchitem.h  plotitem.cpp  (+13 more)
trunk/qoplot/high_level/: Makefile.am  __bar.m  __contourc__.cc  __pltopt__.m  bar.m  box.m  colorbar.m  contour.m  contourc.m  contourf.m  gcf.m  hist.m  ishold.m  pie.m  plot.m  plotyy.m  stem.m
(+117 files in other folders)
